--- a/Lab_Cucumber/Lab_Cucumber.csproj
+++ b/Lab_Cucumber/Lab_Cucumber.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+    <PackageReference Include="Selenium.Support" Version="4.1.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.1.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="95.0.4638.6900" />
     <PackageReference Include="SpecFlow.Assist.Dynamic" Version="1.4.2" />
